fixed overflow caused by testimonials

--- a/css/_layout.sass
+++ b/css/_layout.sass
@@ -18,6 +18,7 @@
     .#{$class}
         width: 100%
         max-width: 100%
+        overflow-x: hidden !important
         box-sizing: border-box
         padding: 1rem
         @include flex(column, nowrap, space-around, center)
